--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ body {
   background-image: linear-gradient(to top, #bb40a0, #23023d);
   transform-origin: bottom center;
   opacity: 0.9;
-  box-shadow: inset 0 0 2vmin rgb(0, 4, 51);
+  box-shadow: inset 0 0 2vmin rgb(20, 37, 223);
 }
 .flower__leaf--1 {
   transform: translate(-10%, 1%) rotateY(40deg) rotateX(-50deg);
@@ -203,7 +203,7 @@ body {
   height: var(--h);
   border-top-right-radius: var(--h);
   border-bottom-left-radius: var(--h);
-  background-image: linear-gradient(to top, rgba(20, 117, 122, 0.4), #39c6d6);
+  background-image: linear-gradient(to top, rgb(6, 97, 102), #39c6d6);
 }
 .flower__line__leaf--1 {
   transform: rotate(70deg) rotateY(30deg);
@@ -240,13 +240,13 @@ body {
   bottom: 0vmin;
   width: 1vmin;
   height: 1vmin;
-  background-color: #fffb00;
+  background-color: #8d0870;
   border-radius: 50%;
   filter: blur(0.2vmin);
   animation: light-ans 4s linear infinite backwards;
 }
 .flower__light:nth-child(odd) {
-  background-color: #23f0ff;
+  background-color: #f10707;
 }
 .flower__light--1 {
   left: -2vmin;
@@ -281,7 +281,7 @@ body {
   animation-delay: 3.5s;
 }
 .flower__grass {
-  --c: #159faa;
+  --c: #00972d;
   --line-w: 1.5vmin;
   position: absolute;
   bottom: 12vmin;
@@ -624,10 +624,10 @@ body {
   width: 10vmin;
   height: 10vmin;
   border-radius: 100% 0% 0% 100%/100% 100% 0% 0%;
-  box-shadow: inset 0 2px 1vmin rgba(44, 238, 252, 0.2);
+  box-shadow: inset 0 2px 1vmin rgba(5, 94, 57, 0.2);
   background-image: linear-gradient(to bottom left, transparent, var(--dark-color)), linear-gradient(to bottom right, #159faa 50%, transparent 50%, transparent);
   -webkit-mask-image: linear-gradient(to bottom right, #159faa 50%, transparent 50%, transparent);
-  mask-image: linear-gradient(to bottom right, #159faa 50%, transparent 50%, transparent);
+  mask-image: linear-gradient(to bottom right, #003b3f 50%, transparent 50%, transparent);
 }
 .flower__g-fr {
   position: absolute;
@@ -814,7 +814,7 @@ mask-image: linear-gradient(to top, transparent 40%, #079097 80%) !important;
 .long-g .leaf {
   --w: 15vmin;
   --h: 40vmin;
-  --c: #1aaa15;
+  --c: #4dee47;
   position: absolute;
   bottom: 0;
   width: var(--w);
@@ -990,7 +990,7 @@ mask-image: linear-gradient(to top, transparent 40%, #079097 80%) !important;
   bottom: 20px;
   right: 20px;
   background-color: rgb(0, 0, 0);
-  color: rgb(17, 167, 84);
+  color: rgb(255, 255, 255);
   padding: 20px;
   border-radius: 5px 5px 5px 5px;
   font-family: cursive;
@@ -999,29 +999,38 @@ mask-image: linear-gradient(to top, transparent 40%, #079097 80%) !important;
   position: fixed;
   font-size: 20px;
   bottom: 20px;
-  top: 50px; /* Altere o valor aqui para mover o texto para cima */
+  top: 50px; 
   color: rgb(17, 167, 84);
   padding: 20px;
   font-family: cursive;
 }
 .text a {
 
-  color: rgb(104, 1, 78); /* Define a cor do texto do link */
-  text-decoration: underline; /* Adiciona uma linha de sublinhado sob o texto do link */
-  font-weight: bold; /* Define a espessura da fonte do link como negrito */
+  color: rgb(234, 233, 236); 
+  text-decoration: underline; 
+  font-weight: bold; 
 }
 
 .text a:hover {
-  /* Estilos para o link quando o cursor está sobre ele */
-  color: rgb(46, 3, 75); /* Altera a cor do texto do link quando o cursor está sobre ele */
+  
+  color: rgb(172, 11, 145); 
 }
-.refs{
-  position: fixed;
-  font-size: 20px;
-  bottom: 20px;
-  top: 10px; 
-  right: 20px;
-  color: rgb(0, 139, 121);
+.batima {
+  position: absolute;
+  top: 0; /* Alinha a parte superior da imagem com o topo do contêiner pai */
+  right: 0; /* Alinha a parte direita da imagem com a borda direita do contêiner pai */
+  max-width: 10%; /* Define a largura máxima da imagem como 20% do contêiner pai */
+  height: auto; /* Mantém a proporção da imagem */
+}
+
+.refs {
+  position: absolute;
+  top: calc(100% + 10px); /* Alinha o topo do .refs abaixo da imagem e adiciona um espaço de 10px */
+  right: 20px; /* Alinha a parte direita de .refs com a borda direita do contêiner pai */
+  color: #970272;
   padding: 20px;
   font-family: cursive;
+  z-index: 1; /* Ajuste o z-index conforme necessário */
+  visibility: visible; /* Certifique-se de que o texto esteja visível */
 }
+
